samples/_failures_safe/1761211614_7fc1ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1334932.c: In function ‘main’:
./samples/SAFE/__tmp_e1334932.c:165:12: error: missing terminating " character
  165 |     printf("Enter text
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_e1334932.c:165:5: error: expected expression at end of input
  165 |     printf("Enter text
      |     ^~~~~~
./samples/SAFE/__tmp_e1334932.c:165:5: error: expected declaration or statement at end of input
